assets/css/style.css
/*  import fonts from google fonts
    use: font-family: 'Assistant', sans-serif; for body text
    use: font-family: 'Quicksand', sans-serif;
     */
@import url("https://fonts.googleapis.com/css2?family=Assistant:wght@200;300;400&family=Quicksand:wght@300;400;500;600;700&display=swap");

/* setup base styling  */
body {
  background-color: #f5f5f5;
  position: relative;
}
p {
  font-family: "Assistant", sans-serif;
}
h2 {
  font-family: "Quicksand", sans-serif;
  font-size: 42pt;
  font-weight: bolder;
  text-align: center;
  color: #5c47d1;
}
h3 {
  font-family: "Quicksand", sans-serif;
  font-size: 28pt;
  font-weight: bolder;
  text-align: center;
  color: #5c47d1;
}
h4 {
  font-family: "Quicksand", sans-serif;
  font-size: 18pt;
  font-weight: bolder;
  text-align: center;
  color: #5c47d1;
}
a {
  font-family: "Quicksand", sans-serif;
  font-weight: bold;
  text-decoration: none;
}
a:hover {
  text-decoration: underline;
  text-decoration-thickness: 3px;
}
.hero-image {
  height: 65vh;
  background-color: #f5f5f5;
  animation: forwards;
  background: url("../images/hero-image.webp") no-repeat center center fixed;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
  overflow: hidden;
  display: flex;
  align-items: center;
  justify-content: center;
  position: relative;
}
/* header - contact details  */
#contact-header {
  color: #f5f5f5;
  font-family: "Assistant", sans-serif;
  padding-top: 10px;
  background-color: #5c47d1;
}
.contact-header p {
  font-size: 12pt;
  color: #f5f5f5;
}
#contact-header b {
  font-family: "Quicksand", sans-serif;
  color: #f5f5f5;
}
/* header - logo */
#header {
  background-color: #f5f5f5;
}
.header-bottom {
  background-color: #f5f5f5;
}
.jenamin {
  font-family: "Quicksand", sans-serif;
  font-weight: bolder;
  font-size: 42pt;
  color: #5c47d1;
}
.tagline {
  font-family: "Quicksand", sans-serif;
  font-size: 18pt;
  line-height: 0;
  color: #121213;
  padding: 0;
}
.logo {
  min-width: fit-content;
  max-width: fit-content;
  padding-bottom: 0;
  margin-bottom: 0;
  text-decoration: none;
}
.navbar-brand:hover {
  text-decoration: none;
}
/* header - links menu */
.nav {
  background-color: #f5f5f5;
}
.navbar-toggler {
  color: #5c47d1;
  background-color: #f5f5f5;
  padding: 3px;
}
.menu {
  background-color: #f5f5f5;
  position: relative;
}
.links {
  text-decoration: none;
  text-align: center;
  font-size: 24px;
  font-weight: bold;
  line-height: 0;
}
.links li {
  padding: 0px 15px 0px 15px;
}
.links a {
  color: #5c47d1;
}
.links a:hover {
  color: #5c47d1;
  text-decoration: underline;
  text-decoration-thickness: 5px;
  text-decoration-color: #5c47d1;
}
.navbar {
  background-color: #f5f5f5;
  padding-bottom: 0;
  margin-bottom: 8px;
}
.nav-item .active:hover {
  text-decoration: none;
}
.collapsed-menu {
  line-height: 10pt;
}
.breadcrumb {
  margin-bottom: 10px;
}
.breadcrumbs {
  background-color: #f5f5f5;
}
.breadcrumb a {
  background-color: #f5f5f5;
  color: #121213;
  font-weight: bolder;
  text-decoration: none;
}
.breadcrumb a:hover {
  text-decoration: underline;
}
/* Footer */ 
/* footer - positioning */
.footer {
  width: 100%;
  position: relative;
  bottom: 0;
  left: 0;
}
.footer-container {
  color: #f5f5f5;
  background-color: #5c47d1;
}
.socials i {
  font-size: larger;
  color: #f5f5f5;
}
.socials li {
  list-style: none;
}
/* footer - styling  */
.footer-upper {
  color: #f5f5f5;
  text-align: center;
}
.map {
  padding: 10px 10px 10px 10px;
}
.footer-divider {
  align-self: center;
  max-width: 5px;
  height: 150px;
  background-color: #f5f5f5;
  padding: 0;
  margin: 0;
}
.essential-info {
  padding-top: 10px;
  align-self: center;
  text-align: center;
  font-size: larger;
  margin-right: 0;
  font-family: "Assistant", sans-serif;
}
.essential-info i {
  color: #f5f5f5;
}
.essential-info h3 {
  font-family: "Quicksand", sans-serif;
  font-size: 18pt;
  font-weight: bold;
  color: #f5f5f5;
}
.essential-info h4 {
  font-family: "Quicksand", sans-serif;
  font-size: 18pt;
  font-weight: bold;
  color: #f5f5f5;
}

/* footer - lower */
.footer-lower {
  padding-top: 10px;
  text-align: center;
  color: #f5f5f5;
  background-color: #536b79;
  height: fit-content;
}
.copyright {
  font-family: "Quicksand", sans-serif;
  text-align: center;
}
.footer-lower a {
  font-family: "Quicksand", sans-serif;
  font-weight: bold;
  color: #f5f5f5;
}
.footer-lower a:hover {
  font-weight: bolder;
  color: #121213;
  text-decoration: underline;
  text-decoration-thickness: 5px;
}
.footer-lower i:hover {
  font-weight: bolder;
  color: #121213;
}
/* per page styling */
/* index.html  */
.main-section {
  color: #121213;
  position: absolute;
  background-color: #f5f5f5;
}
.reasons-container {
  padding: 20px 50px 20px 50px;
  font-size: 16pt;
}

.purple {
  color: #5c47d1;
  font-size: 28pt;
}
.divider-purple {
  align-self: center;
  max-width: 5px;
  height: 100px;
  background-color: #5c47d1;
  padding: 0px;
  margin: 20px;
}
.horizontal-divider {
  min-height: 5px;
  max-height: 5px;
  width: 100px;
  background-color: #5c47d1;
  margin-bottom: 20px;
}
/* About Us */
.about-main-section {
  height: fit-content;
  font-size: 18pt;
  padding: 20px;
  margin: 10px;
}
.about-header {
  color: #5c47d1;
}
.about-main-section h3 {
  color: #5c47d1;
  padding: 10px;
}
#about-body p {
  text-align: left;
  color: #121213;
}
.about-box {
  background-color: rgba(245, 245, 245, 0.8);
  max-width: 75%;
  min-width: 350px;
  height: auto;
  padding: 10px;
  margin-bottom: 20px;
  text-align: left;
}
.about-box p {
  padding-bottom: 10px;
  margin: 10px;
}
#about-people img {
  width: 300px;
  min-width: 250px;
  float: left;
}
#about-dogs img {
  width: 300px;
  min-width: 300px;
}
.about-image {
  margin: 10px;
  max-width: 300px;
  height: 300px;

  min-width: auto;
  overflow: hidden;
}
/* Upcoming Litters */
.litters-main-section {
  height: fit-content;
  font-size: 18pt;
  color: #121213;
  margin-bottom: 10px;
}
.litters-box {
  height: auto;
  background-color: rgba(245, 245, 245, 0.8);
  min-width: 350px;
  margin-top: 20px;
  width: 70%;
}
.litters-images {
  width: 100%;
  min-width: 300px;
}
.puppy-images {
  max-width: 15%;
  min-width: 300px;
  min-height: 300px;
  height: auto;
}
/* Testimonials */
.testimonials-main-section {
  color: #121213;
  height: auto;
}
.testimonials-hero {
  height: 100%;
  padding-top: 10px;
  padding-bottom: 10px;
  margin-bottom: 10px;
}
.carousel {
  width: 500px;
  min-height: 500px;
  height: 100%;
}
.carousel h4 {
  padding: 10px;
}
.carousel-inner {
  background-color: #f5f5f5;
  color: #121213;
  padding: 10px;
  height: 100%;
  max-height: 500px;
}
.slide {
  height: fit-content;
}
.carousel-inner p {
  font-family: "Assistant", sans-serif;
  font-size: larger;
  padding: 20px;
  color: #121213;
}
.carousel-item {
  width: 100%;
  min-height: 500px;
}
.carousel-control-next,
.carousel-control-prev {
  max-height: 500px;
}
/* Privacy Policy */
.privacy-main-section {
  height: fit-content;
  background-size: cover;
  display: flex;
  align-items: center;
  justify-content: center;
  padding: 20px;
  margin: 10px;
}
.privacy-policy {
  max-width: 75%;
  min-width: 300px;
  height: auto;
  font-size: 14pt;
  font-family: "Assistant", sans-serif;
  background-color: rgba(245, 245, 245, 0.8);
  padding: 30px;
}
.privacy-policy h3 {
  padding-top: 20pt;
}
#ico {
  color: #5c47d1;
}
#ico:hover {
  color: #9d8df1;
  text-decoration-color: #9d8df1;
}
/* Contact Us*/
.contact-main-section {
  height: fit-content;
  background-size: cover;
  display: flex;
  align-items: center;
  justify-content: center;
  padding: 20px;
  margin: 10px;
}
.form {
  max-width: 500px;
  background-color: rgba(157, 141, 241, 0.8);
  padding: 15px;
  text-align: center;
  border: none;
  font-family: "Quicksand", sans-serif;
}
.form-control {
  outline-color: #f5f5f5;
}
.btn-dark {
  border: none;
}
/* 404 page */

#error-link {
  color: #5c47d1;
  text-decoration: underline;
}

#error-link:hover {
  color: #5c47d1;
  text-decoration: underline;
  text-decoration-thickness: 5px;
}


/* Media Queries */
@media (min-width: 999px) {
  .menu {
    position: relative;
  }
  .links {
    position: absolute;
    padding-right: 10px;
    padding-left: 10px;
    right: 0;
    bottom: 0;
    min-width: 695px;
  }
}
@media (max-width: 599px) {
  h2 {
    font-size: 28pt;
  }
  p {
    font-size: 14pt;
  }
  li {
    font-size: 14pt;
  }
  #header p {
    font-size: 8pt;
  }
  .container {
    --bs-gutter-x: 1rem;
    position: absolute;
  }
  .hero-image {
    background: url("../images/hero-image-mobile.webp") no-repeat top center fixed;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    overflow: hidden;
    display: flex;
    align-items: center;
    justify-content: center;
    position: relative;
  }
  .divider-purple {
    display: none;
  }
  .reasons p {
    min-width: 200px;
    padding: 10px;
  }
  .carousel-item p {
    padding-top: 6px;
    text-align: left;
  }
  .carousel-item h4 {
    padding: 0;
  }
  .horizontal-divider {
    margin-bottom: 0;
  }
  .footer-divider {
    display: none;
  }
  .social-links {
    padding-top: 10px;
  }
  .navbar-toggler {
    color: #5c47d1;
    background-color: #f5f5f5;
    padding: 3px;
  }
  .navbar-collapse {
    padding-top: 10px;
  }
}

